k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-service
spec:
  selector:
    app: nestjs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
