k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nestjs-ingress
spec:
  rules:
    - host: nest.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nestjs-service
                port:
                  number: 80
